# fontconfig-cmake

./: CMakeLists.txt  config.h
fc-arch/: fcarch.h
